<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, mainActivity!</string>   
    <string name="test_name">Test_Page</string>
    <string name="app_name">Demo_form_field</string>
	<string name="hint">Please enter the text!</string>
	<string name="x_value">X_value:</string>
	<string name="y_value">Y_value:</string>
	<string name="width">ImageWidth:</string>
	<string name="height">ImageHeight:</string>
	<string name="form_page">Generator</string>
	<string name="description">Test_View</string>
	<string name="imageWidth">Page Width:</string>
	<string name="imageHeight">Page Height:</string>
	<string name="xscale">PageWidth_Scale:</string>
	<string name="yscale">PageHeight_Scale:</string>
	<string name="left">&lt;--</string>
	<string name="right">--&gt;</string>
	<string name="up">^</string>
	<string name="down">V</string>
	<string name="hit">HIT</string>
	<string name="Coordinates">0.0,0.0</string>
	<string name="_MNT_SDCARD_TEST_DOCUMENT1">/mnt/sdcard/HS-268.pdf</string>
	<string name="_MNT_SDCARD_TEST_DOCUMENT2">/mnt/sdcard/HS-258.pdf</string>
	<string name="_DATA_DATA_TEST_SAVED_DOCUMENT">/data/data/com.foxitsample.formfiled/savedDocument.pdf</string>
	<string name="_DATA_DATA_TEST_FINALED_DOCUMENT">/data/data/com.foxitsample.formfiled/finaledDocument.pdf</string>
	<string name="closeTest">CloseTest</string>
	<string name="doc1">doc1</string>
	<string name="doc2">doc2</string>
	<string name="savedDoc">savedDoc</string>
	<string name="finaled">finaled</string>
	
	
</resources>